--- a/WebContent/Editor.html
+++ b/WebContent/Editor.html
@@ -584,6 +584,7 @@ K:C%
 			<div id="Spartito" class="col-md-12 col-sm-12">
 				<div id="paper0"
 					class="paper col-sm-8 col-sm-push-2 col-md-8 col-md-push-2">
+					<div  id="score" class="abcScore">SCORE</div>
 				</div>
 			</div>
 		</div>
