Aggiunta modifica nota

--- a/WebContent/Editor.html
+++ b/WebContent/Editor.html
@@ -472,7 +472,7 @@ K:C%
 					class="btn btn-default symbolButton" type="button"></button>
 				<button onclick="writeZ()" id="restButton"
 					class="btn btn-default symbolButton" type="button"></button>
-				<button onclick="autoQ()" id="endlineButton" class="btn btn-default symbolButton"
+				<button onclick="endOfTheLine()" id="endlineButton" class="btn btn-default symbolButton"
 					type="button"></button>
 				<button onclick="writeAltoClef()" id="clefalto"
 					class="btn btn-default symbolButton" type="button"></button>
