--- a/WebContent/Editor.html
+++ b/WebContent/Editor.html
@@ -11,6 +11,7 @@
 <script src="midi/abcjs_basic_2.3-min.js" type="text/javascript"></script>
 <script src="midi/jquery-3.1.1.min.js" type="text/javascript"></script>
 <script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>
+<script type='text/javascript' src=js/shortcut.js></script>
 <script src="midi/editor.js" type='text/javascript'></script>
 
 
@@ -63,11 +64,11 @@
 		//var cooleys = 'X:1\nT: Cooley\'s\nM: 4/4\nL: 1/8\nR: reel\nK: Emin\nD2|:"Em"EB{c}BA B2 EB|~B2 AB dBAG|"D"FDAD BDAD|FDAD dAFD|\n"Em"EBBA B2 EB|B2 AB defg|"D"afe^c dBAF|1"Em"DEFD E2 D2:|2"Em"DEFD E2 gf||\n|:"Em"eB B2 efge|eB B2 gedB|"D"A2 FA DAFA|A2 FA defg|\n"Em"eB B2 eBgB|eB B2 defg|"D"afe^c dBAF|1"Em"DEFD E2 gf:|2"Em"DEFD E4|]\n';
 		ABCJS.renderPlayMidi(midi, v.value, {}, {}, {});
 		var output = $("#midi a").attr("href");
-		console.log("OUTPUT", output);
+		//console.log("OUTPUT", output);
 		$(".midi > a").css("display", "none");
 		MIDIjs.play(output);
 
-		setTimeout(animateCursor, 700);
+		//setTimeout(animateCursor, 700);
 
 	}
 
@@ -121,7 +122,6 @@
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
-	<input id="load" type="file" onchange="load()">
 	<div class="container">
 		<div id="logo" class="col-sm-6 col-sm-push-3 col-md-6 col-md-push-3">
 			<img class="img-responsive" src="img/logo.png">
@@ -132,7 +132,7 @@
 			<form class="hidden-xs col-sm-2 col-md-2" role="form">
 				<div class="form-group">
 					<label for="title">Title</label> <input type="text"
-						class="form-control inputInfo" id="title" value="Enter Title"
+						class="form-control inputInfo" id="title" value="NewScore"
 						onkeyup="properties_apply()">
 				</div>
 			</form>
@@ -146,8 +146,8 @@
 			<form class="hidden-xs col-sm-2 col-md-2" role="form">
 				<div class="form-group">
 					<label for="tempo">Tempo</label> <input type="number"
-						onkeyup="properties_apply()" class="form-control inputInfo"
-						id="tempo" value="120">
+						onkeyup="properties_apply()" onchange="properties_apply()"
+						class="form-control inputInfo" id="tempo" value="120">
 				</div>
 			</form>
 			<form class="hidden-xs col-sm-2 col-md-2" role="form">
@@ -161,14 +161,14 @@
 				<div class="form-group">
 					<label for="noteUnit">Note Unit</label> <input type="text"
 						onkeyup="properties_apply()" class="form-control inputInfo"
-						id="noteUnit" value="1/4">
+						id="noteUnit" value="1/8">
 				</div>
 			</form>
 			<form class="hidden-xs col-sm-2 col-md-2" role="form">
 				<div class="form-group">
 					<label for="keySignature inputInfo">Key Signature</label> <select
 						id="keySignature" class="form-control Dropdown"
-						onkeyup="properties_apply()">
+						onchange="properties_apply()">
 						<option>F# (fa# maggiore)</option>
 						<option>B (si maggiore)</option>
 						<option>E (mi maggiore)</option>
@@ -193,7 +193,7 @@
 						class="form-control inputInfo"></textarea>
 					<textarea id="headers" cols="50" rows="15"
 						class="form-control inputInfo">T: NewScore
-C: User
+C: Composer
 M: 4/4
 L: 1/8
 Q:120
@@ -472,8 +472,8 @@ K:C%
 					class="btn btn-default symbolButton" type="button"></button>
 				<button onclick="writeZ()" id="restButton"
 					class="btn btn-default symbolButton" type="button"></button>
-				<button onclick="endOfTheLine()" id="endlineButton" class="btn btn-default symbolButton"
-					type="button"></button>
+				<button onclick="endOfTheLine()" id="endlineButton"
+					class="btn btn-default symbolButton" type="button"></button>
 				<button onclick="writeAltoClef()" id="clefalto"
 					class="btn btn-default symbolButton" type="button"></button>
 				<button onclick="wirteBassClef()" id="clefbass"
@@ -542,8 +542,7 @@ K:C%
 					type="button"></button>
 			</div>
 			<div id="playStopBar" class="hidden-xs col-sm-6 col-md-5">
-				<button onclick="playMIDI()" id="play"
-					class="btn btn-default optionButton" type="button"></button>
+				<button id="play" class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopTranscribe()" id="pause"
 					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopMIDI()" id="stop"
@@ -556,6 +555,8 @@ K:C%
 					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="save()" id="save"
 					class="btn btn-default optionButton" type="button"></button>
+				<label id="upload" class="btn btn-default optionButton" for="load"></label>
+				<input class="hidden" id="load" type="file" onchange="load()">
 				<button onclick="downloadMidi()" id="download"
 					class="btn btn-default optionButton" type="button"></button>
 				<div name="midi" class="midi" id="midi"></div>
@@ -575,7 +576,8 @@ K:C%
 				</div>
 				<div class="hidden-xs col-sm4 col-md-4">
 					<input id="metronomo" class="form-control Dropdown" type="number"
-						min="40" max="280" value="120" onchange="setTempo()">
+						min="40" max="280" value="120" onchange="setTempo()"
+						onkeyup="setTempo()">
 				</div>
 			</div>
 		</div>
@@ -584,7 +586,7 @@ K:C%
 			<div id="Spartito" class="col-md-12 col-sm-12">
 				<div id="paper0"
 					class="paper col-sm-8 col-sm-push-2 col-md-8 col-md-push-2">
-					<div id="score" class="abcScore">SCORE</div>
+					<div id="score" class="abcScore"></div>
 				</div>
 			</div>
 		</div>
@@ -620,7 +622,7 @@ K:C%
 	</div>
 
 	<div class="editNote_menu">
-		<input  type="text" id="editNote" placeholder="  note ">
+		<input type="text" id="editNote" placeholder="  note ">
 		<button class="btn btn-default buttonMenuEdit" id="mod_btn">Modify</button>
 		<button class="btn btn-default buttonMenuEdit" id="ins_btn">Insert</button>
 		<button class="btn btn-default buttonMenuEdit" id="can_edi_btn">Cancel</button>
