--- a/WebContent/User.html
+++ b/WebContent/User.html
@@ -125,7 +125,7 @@
 	<div class="container">
 
 		<div id="logo" class="col-sm-6 col-sm-push-3 col-md-6 col-md-push-3">
-			
+
 			<img class="img-responsive" src="img/logo.png">
 		</div>
 	</div>
@@ -600,7 +600,8 @@ K:Bm
 					<div id="score" class="abcScore"></div>
 				</div>
 			</div>
-			<button class="btn btn-primary" data-toggle="collapse" data-target="#demo">See Comments</button>
+			<button class="btn btn-primary" data-toggle="collapse"
+				data-target="#demo">See Comments</button>
 		</div>
 
 		<div id="quintaRiga" class="row">
@@ -620,90 +621,92 @@ K:Bm
 
 
 		<div class="row " id="comment-section">
-<div id="demo" class="collapse">
+			<div id="demo" class="collapse">
 
-			<hr>
-			<div class="container " id="section container">
-				<!-- comment box -->
-				<div class="user-comment well panel panel-default">
-					<h4>
-						<i class="fa fa-paper-plane-o"></i>
-					</h4>
-					<form role="form">
-						<div class="form-group">
-							<textarea class="form-control" rows="3"
-								placeholder="leave a comment..."></textarea>
+				<hr>
+				<div class="container " id="section container">
+					<!-- comment box -->
+					<div class="user-comment well panel panel-default">
+						<h4>
+							<i class="fa fa-paper-plane-o"></i>
+						</h4>
+						<form role="form">
+							<div class="form-group">
+								<textarea class="form-control" rows="3"
+									placeholder="leave a comment..."></textarea>
+							</div>
+							<button type="submit" name="say" value="" class="btn btn-primary"
+								id="submit-btn">
+								<i class="fa fa-reply"></i> Submit
+							</button>
+						</form>
+					</div>
+
+					<hr>
+
+
+
+					<!-- the comments -->
+
+
+
+
+
+					<div class="comment-warpper  panel-group ">
+
+
+
+
+						<div class="panel panel-default">
+
+							<div class="panel-heading">
+								<h3>
+									<i class="fa fa-comment"></i> User1 says: <small> 9:41
+										PM on August 24, 2014</small>
+								</h3>
+							</div>
+
+
+							<div class="panel-body">
+								<p>Excellent post! Thank You the great article, it was
+									useful Excellent post! Thank You the great article, it was
+									useful Excellent post! Thank You the great article, it was
+									useful Excellent post! Thank You the great article, it was
+									useful!</p>
+							</div>
 						</div>
-						<button type="submit" name="say" value="" class="btn btn-primary"
-							id="submit-btn">
-							<i class="fa fa-reply"></i> Submit
-						</button>
-					</form>
-				</div>
-
-			<hr>
 
 
 
-				<!-- the comments -->
+						<div class="panel panel-default">
+
+							<div class="panel-heading">
+								<h3>
+									<i class="fa fa-comment"></i> User2 says: <small> 9:42
+										PM on August 24, 2014</small>
+								</h3>
+							</div>
 
 
-
-
-
-				<div class="comment-warpper  panel-group ">
-
-
-
-
-					<div class="panel panel-default">
-
-						<div class="panel-heading">
-							<h3>
-								<i class="fa fa-comment"></i> User1 says: <small> 9:41
-									PM on August 24, 2014</small>
-							</h3>
+							<div class="panel-body">
+								<p>Excellent post! Thank You the great article, it was
+									useful Excellent post! Thank You the great article, it was
+									useful Excellent post! Thank You the great article, it was
+									useful Excellent post! Thank You the great article, it was
+									useful!</p>
+							</div>
 						</div>
 
 
-						<div class="panel-body">
-							<p>Excellent post! Thank You the great article, it was useful
-								Excellent post! Thank You the great article, it was useful
-								Excellent post! Thank You the great article, it was useful
-								Excellent post! Thank You the great article, it was useful!</p>
-						</div>
 					</div>
 
 
 
-					<div class="panel panel-default">
-
-						<div class="panel-heading">
-							<h3>
-								<i class="fa fa-comment"></i> User2 says: <small> 9:42
-									PM on August 24, 2014</small>
-							</h3>
-						</div>
-
-
-						<div class="panel-body">
-							<p>Excellent post! Thank You the great article, it was useful
-								Excellent post! Thank You the great article, it was useful
-								Excellent post! Thank You the great article, it was useful
-								Excellent post! Thank You the great article, it was useful!</p>
-						</div>
-					</div>
-
-
 				</div>
-
-
-
 			</div>
+
+
 		</div>
-
-
-</div>
 
 
 
