--- a/WebContent/Editor.html
+++ b/WebContent/Editor.html
@@ -16,7 +16,7 @@
 
 
 <script type="text/javascript">
-	$(".svg").css("background-color", "yellow");
+/*	$(".svg").css("background-color", "yellow"); */
 
 	window.onload = function() {
 
