--- a/WebContent/User.html
+++ b/WebContent/User.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>DraftAudio Editor</title>
+<title>DraftAudio-Pubblic Draft</title>
 <!-- MidiWeb & Varie -->
 <script src="midi/abcjs_editor_latest-min.js" type="text/javascript"></script>
 <script src="midi/abcjs_basic_2.3-min.js" type="text/javascript"></script>
