--- a/WebContent/Editor.html
+++ b/WebContent/Editor.html
@@ -14,104 +14,6 @@
 <script type='text/javascript' src=js/shortcut.js></script>
 <script src="midi/editor.js" type='text/javascript'></script>
 
-
-<script type="text/javascript">
-	/*	$(".svg").css("background-color", "yellow"); */
-
-	window.onload = function() {
-
-		init();
-		/*
-		 var body = $('body');
-		 body.on("click", ".do-animation", function() {
-		 var el = $(this);
-		 var params = el.attr("data-params");
-		 params = JSON.parse(params);
-		 var paperSelector = el.attr("data-paper");
-		 var paper = $(paperSelector)[0];
-
-		 playMIDI();
-
-		 window.ABCJS.startAnimation(paper, abc_editor.tunes[0], params);
-
-		 });*/
-
-		abc_editor = new window.ABCJS.Editor("headers", {
-			paper_id : "paper0",
-			warnings_id : "warnings",
-			parser_options : {},
-			render_options : {
-				editable : true,
-				add_classes : true
-
-			}
-		});
-
-	}
-
-	/*
-	 function animateCursor() {
-
-	 var paper = document.getElementById('paper0');
-	 window.ABCJS.startAnimation(paper, abc_editor.tunes[0], {
-	 "showCursor" : true,
-	 "bpm" : 120
-	 });
-
-	 }
-
-	 function playMIDI() {
-	 var v = document.getElementById('abc');
-	 //var cooleys = 'X:1\nT: Cooley\'s\nM: 4/4\nL: 1/8\nR: reel\nK: Emin\nD2|:"Em"EB{c}BA B2 EB|~B2 AB dBAG|"D"FDAD BDAD|FDAD dAFD|\n"Em"EBBA B2 EB|B2 AB defg|"D"afe^c dBAF|1"Em"DEFD E2 D2:|2"Em"DEFD E2 gf||\n|:"Em"eB B2 efge|eB B2 gedB|"D"A2 FA DAFA|A2 FA defg|\n"Em"eB B2 eBgB|eB B2 defg|"D"afe^c dBAF|1"Em"DEFD E2 gf:|2"Em"DEFD E4|]\n';
-	 ABCJS.renderPlayMidi(midi, v.value, {}, {}, {});
-	 var output = $("#midi a").attr("href");
-	 //console.log("OUTPUT", output);
-	 $(".midi > a").css("display", "none");
-	 MIDIjs.play(output);
-
-	 //setTimeout(animateCursor, 700);
-
-	 }
-	 function stopCurrentlyPlayingTune() {
-	 MIDI.player.stop();
-	 }
-	
-	 */
-
-	function stopMIDI() {
-		//stop( midlink );
-		window.ABCJS.stopAnimation();
-		MIDIjs.stop();
-
-	}
-
-	function downloadMidi() {
-
-		//modificare l'area di testo sorgente
-		var v = document.getElementById('headers');
-		//var cooleys = 'X:1\nT: Cooley\'s\nM: 4/4\nL: 1/8\nR: reel\nK: Emin\nD2|:"Em"EB{c}BA B2 EB|~B2 AB dBAG|"D"FDAD BDAD|FDAD dAFD|\n"Em"EBBA B2 EB|B2 AB defg|"D"afe^c dBAF|1"Em"DEFD E2 D2:|2"Em"DEFD E2 gf||\n|:"Em"eB B2 efge|eB B2 gedB|"D"A2 FA DAFA|A2 FA defg|\n"Em"eB B2 eBgB|eB B2 defg|"D"afe^c dBAF|1"Em"DEFD E2 gf:|2"Em"DEFD E4|]\n';
-		//ABCJS.renderMidi('notation', v.value, {}, {}, {});
-
-		var mParams = '{ "parserParams":[{"print":true, "header_only":false, "stop_on_warning":false}],'
-				+ ' "engraverParams":[{"scale":1, "staffwidth":740, "paddingtop":15, "paddingbottom":30,'
-				+ ' "paddingright":50, "paddingleft":15, "editable":true, "add_classes":true }]}';
-
-		param = JSON.parse(mParams);
-
-		ABCJS.renderMidi(midi, v.value, param.parserParams[0], {
-			qpm : 180,
-			program : 2
-		}, {
-			startingTune : 0
-		});
-
-		$(".midi > a").css("display", "none");
-
-		return false;
-	}
-</script>
-
-
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/editor.css" rel="stylesheet">
@@ -540,13 +442,14 @@ K:C%
 					class="btn btn-default optionButtonxs" type="button"></button>
 				<button onclick="save()" id="savexs"
 					class="btn btn-default optionButtonxs" type="button"></button>
-				
-				
+
+
 				<button onclick="downloadMidi()" id="downloadxs"
 					class="btn btn-default optionButtonxs" type="button"></button>
 			</div>
 			<div id="playStopBar" class="hidden-xs col-sm-6 col-md-5">
-				<button onclick="playMIDI()" id="play" class="btn btn-default optionButton" type="button"></button>
+				<button onclick="playMIDI()" id="play"
+					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopTranscribe()" id="pause"
 					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopMIDI()" id="stop"
@@ -567,11 +470,11 @@ K:C%
 			</div>
 			<div id="undoRedoBar" class="hidden-xs col-sm-1 col-md-3"></div>
 			<div id="metronomoBarxs" class="visible-xs">
-				<button onclick="startTranscribe()" id="recxs" value="OFF" class="btn btn-default btn-circle optionButtonxs"
-					type="button"></button>
+				<button onclick="startTranscribe()" id="recxs" value="OFF"
+					class="btn btn-default btn-circle optionButtonxs" type="button"></button>
 				<label>Metronomo</label> <input id="metronomoxs" class="Dropdown"
 					type="number" min="40" max="280" value="120" onchange="setTempo()"
-						onkeyup="setTempo()">
+					onkeyup="setTempo()">
 			</div>
 			<div id="metronomoBar" class="hidden-xs col-sm-5 col-md-4">
 				<div id="recbar" class="hidden-xs  col-sm-8 col-md-8">
