aggiunti play e stop xs a userDraft e editorDraft ritoccata la funzione play, aggiunta tastiera responsive

--- a/WebContent/Editor.html
+++ b/WebContent/Editor.html
@@ -428,7 +428,7 @@ K:C%
 		</div>
 		<div id="terzaRiga" class="row">
 			<div id="playStopBarxs" class="visible-xs">
-				<button id="playxs" class="btn btn-default optionButtonxs"
+				<button onclick="playMIDI()" id="playxs" class="btn btn-default optionButtonxs"
 					type="button"></button>
 				<button id="pausexs" class="btn btn-default optionButtonxs"
 					type="button"></button>
@@ -448,7 +448,7 @@ K:C%
 					class="btn btn-default optionButtonxs" type="button"></button>
 			</div>
 			<div id="playStopBar" class="hidden-xs col-sm-6 col-md-5">
-				<button onclick="playMIDI()" id="play"
+				<button  id="play"
 					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopTranscribe()" id="pause"
 					class="btn btn-default optionButton" type="button"></button>
