--- a/WebContent/User.html
+++ b/WebContent/User.html
@@ -15,99 +15,6 @@
 <script src="midi/editor.js" type='text/javascript'></script>
 
 
-<script type="text/javascript">
-	$(".svg").css("background-color", "yellow");
-
-	window.onload = function() {
-
-		init();
-		/*
-		 var body = $('body');
-		 body.on("click", ".do-animation", function() {
-		 var el = $(this);
-		 var params = el.attr("data-params");
-		 params = JSON.parse(params);
-		 var paperSelector = el.attr("data-paper");
-		 var paper = $(paperSelector)[0];
-
-		 playMIDI();
-
-		 window.ABCJS.startAnimation(paper, abc_editor.tunes[0], params);
-
-		 });*/
-
-		abc_editor = new window.ABCJS.Editor("headers", {
-			paper_id : "paper0",
-			warnings_id : "warnings",
-			parser_options : {},
-			render_options : {
-				editable : true,
-				add_classes : true
-
-			}
-		});
-
-	}
-
-	function animateCursor() {
-
-		var paper = document.getElementById('paper0');
-		window.ABCJS.startAnimation(paper, abc_editor.tunes[0], {
-			"showCursor" : true,
-			"bpm" : 120
-		});
-
-	}
-
-	function playMIDI() {
-		var v = document.getElementById('abc');
-		//var cooleys = 'X:1\nT: Cooley\'s\nM: 4/4\nL: 1/8\nR: reel\nK: Emin\nD2|:"Em"EB{c}BA B2 EB|~B2 AB dBAG|"D"FDAD BDAD|FDAD dAFD|\n"Em"EBBA B2 EB|B2 AB defg|"D"afe^c dBAF|1"Em"DEFD E2 D2:|2"Em"DEFD E2 gf||\n|:"Em"eB B2 efge|eB B2 gedB|"D"A2 FA DAFA|A2 FA defg|\n"Em"eB B2 eBgB|eB B2 defg|"D"afe^c dBAF|1"Em"DEFD E2 gf:|2"Em"DEFD E4|]\n';
-		ABCJS.renderPlayMidi(midi, v.value, {}, {}, {});
-		var output = $("#midi a").attr("href");
-		//console.log("OUTPUT", output);
-		$(".midi > a").css("display", "none");
-		MIDIjs.play(output);
-
-		//setTimeout(animateCursor, 700);
-
-	}
-
-	function stopCurrentlyPlayingTune() {
-		MIDI.player.stop();
-	}
-
-	function stopMIDI() {
-		//stop( midlink );
-		window.ABCJS.stopAnimation();
-		MIDIjs.stop();
-
-	}
-
-	function downloadMidi() {
-
-		//modificare l'area di testo sorgente
-		var v = document.getElementById('headers');
-		//var cooleys = 'X:1\nT: Cooley\'s\nM: 4/4\nL: 1/8\nR: reel\nK: Emin\nD2|:"Em"EB{c}BA B2 EB|~B2 AB dBAG|"D"FDAD BDAD|FDAD dAFD|\n"Em"EBBA B2 EB|B2 AB defg|"D"afe^c dBAF|1"Em"DEFD E2 D2:|2"Em"DEFD E2 gf||\n|:"Em"eB B2 efge|eB B2 gedB|"D"A2 FA DAFA|A2 FA defg|\n"Em"eB B2 eBgB|eB B2 defg|"D"afe^c dBAF|1"Em"DEFD E2 gf:|2"Em"DEFD E4|]\n';
-		//ABCJS.renderMidi('notation', v.value, {}, {}, {});
-
-		var mParams = '{ "parserParams":[{"print":true, "header_only":false, "stop_on_warning":false}],'
-				+ ' "engraverParams":[{"scale":1, "staffwidth":740, "paddingtop":15, "paddingbottom":30,'
-				+ ' "paddingright":50, "paddingleft":15, "editable":true, "add_classes":true }]}';
-
-		param = JSON.parse(mParams);
-
-		ABCJS.renderMidi(midi, v.value, param.parserParams[0], {
-			qpm : 180,
-			program : 2
-		}, {
-			startingTune : 0
-		});
-
-		$(".midi > a").css("display", "none");
-
-		return false;
-	}
-</script>
 
 
 <!-- Bootstrap -->
@@ -534,7 +441,7 @@ K:Bm
 		</div>
 		<div id="terzaRiga" class="row">
 			<div id="playStopBarxs" class="visible-xs">
-				<button id="playxs" class="btn btn-default optionButtonxs"
+				<button onclick="playMIDI()" id="playxs" class="btn btn-default optionButtonxs"
 					type="button"></button>
 				<button id="pausexs" class="btn btn-default optionButtonxs"
 					type="button"></button>
@@ -556,7 +463,7 @@ K:Bm
 					class="btn btn-default optionButtonxs" type="button"></button>
 			</div>
 			<div id="playStopBar" class="hidden-xs col-sm-6 col-md-5 col-lg-3">
-				<button id="play" class="btn btn-default optionButton" type="button"></button>
+				<button onclick="playMIDI()" id="play" class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopTranscribe()" id="pause"
 					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopMIDI()" id="stop"
