aggiunte classi per evidenziare input field se scorretti o corretti, aggiunto tastino home in user

--- a/WebContent/User.html
+++ b/WebContent/User.html
@@ -459,10 +459,12 @@ K:Bm
 					class="btn btn-default optionButtonxs" type="button"></button>
 				<button onclick="like()" id="likexs"
 					class="btn btn-default optionButtonxs" type="button"></button>
+				<button onclick="home()" id="homexs"
+					class="btn btn-default optionButtonxs" type="button"></button>
 				<button onclick="downloadMidi()" id="downloadxs"
 					class="btn btn-default optionButtonxs" type="button"></button>
 			</div>
-			<div id="playStopBar" class="hidden-xs col-sm-6 col-md-5 col-lg-3">
+			<div id="playStopBar" class="hidden-xs col-sm-6 col-md-5 col-lg-4">
 				<button onclick="playMIDI()" id="play" class="btn btn-default optionButton" type="button"></button>
 				<button onclick="stopTranscribe()" id="pause"
 					class="btn btn-default optionButton" type="button"></button>
@@ -480,6 +482,9 @@ K:Bm
 					class="btn btn-default optionButton" type="button"></button>
 				<button onclick="like()" id="like"
 					class="btn btn-default optionButton" type="button"></button>
+				
+						<button onclick="home()" id="home"
+					class="btn btn-default optionButton" type="button"></button>	
 
 				<label id="upload" class="btn btn-default optionButton" for="load"></label>
 				<input class="hidden" id="load" type="file" onchange="load()">
