--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -84,13 +84,13 @@
 											accept-charset="UTF-8" id="login-nav">
 											<div class="form-group col-md-12">
 												<label for="email">Email address:</label> <input
-													type="email" class="form-control" id="exampleInputEmail2"
+													type="email" class="form-control form-valid" id="exampleInputEmail2"
 													placeholder="Email address" required>
 											</div>
 
 											<div class="form-group col-md-12">
 												<label for="email">Password:</label> <input type="password"
-													class="form-control" id="exampleInputPwdl2"
+													class="form-control form-not-valid" id="exampleInputPwdl2"
 													placeholder="Password" required>
 												<div class="help-block text-right">
 													<a href="">Forget the password ?</a>
